--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,11 @@ java {
     }
 }
 
+tasks.named('run') {
+    standardInput = System.in
+}
+
+
 application {
     // Define the main class for the application.
     mainClass = 'App'
