--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,12 +19,14 @@ dependencies {
     // Use JUnit Jupiter for testing.
     testImplementation libs.junit.jupiter
 
+
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
     // This dependency is used by the application.
     implementation libs.guava
 
     implementation 'com.googlecode.json-simple:json-simple:1.1.1'
+    implementation 'com.google.code.gson:gson:2.8.9'
 }
 
 // Apply a specific Java toolchain to ease working on different environments.
